# MyceliumCortex

./: ARCHITECTURE.txt  ATTRIBUTION_NOTES.md  AUTONOMOUS_FEATURES.md  CHANNELS.md  CHANNELS_UPDATE.md  CHANNEL_IMPLEMENTATION.md  EXTENSIONS.md  GETTING_STARTED.md  GETTING_STARTED_MINIMAL.md  IDEA.md  IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  INDEX.md  PROJECT_SUMMARY.md  QUICKSTART.md  RAG_GUIDE.md  RAG_IMPLEMENTATION.md  RAG_QUICKREF.md  RAG_START_HERE.md  README.md  SMART_AGENTS_QUICKREF.md  USAGE.md  examples.py  examples_rag.py  examples_rag_integration.py  examples_smart_agents.py  myceliumcortex.py  pyproject.toml  requirements.txt  sample_test.txt  setup.py  test_ingest.db  test_ingest2.db
data/: myceliumcortex.db  test.db  test2.db
src/: __init__.py  main.py
src/agents/: __init__.py  aux_agents.py  execution_agents.py  integrations.py  knowledge_agents.py  smart_agents.py
src/api/: server.py
src/config/: __init__.py  config.py
src/core/: __init__.py  agent.py  types.py
src/host/: host_manager.py  secrets.py
src/messaging/: message_bus.py  redis_bus.py
src/rag/: __init__.py  embeddings.py  ingestion.py  rag_system.py
src/storage/: sqlite_memory.py  vector_store.py
src/supervisors/: __init__.py  strategic.py  tactical_supervisors.py
tests/: test_e2e.py  test_flow.py
