[project]
name = "miniclaw"
version = "0.1.0"
description = "Lightweight hierarchical multi-agent AI assistant"
authors = [
    {name = "MiniClaw Team", email = "dev@example.com"}
]
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.7.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
miniclaw = "src.main:main"

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
